add msgs and loaded from server

--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -24,6 +24,62 @@
       height: 200px;
       align-self: center;
     }
+
+
+
+
+
+
+
+    /* The snackbar - position it at the bottom and in the middle of the screen */
+    #snackbar {
+      visibility: hidden; /* Hidden by default. Visible on click */
+      min-width: 250px; /* Set a default minimum width */
+      margin-left: -125px; /* Divide value of min-width by 2 */
+      background-color: #333; /* Black background color */
+      color: #fff; /* White text color */
+      text-align: center; /* Centered text */
+      border-radius: 2px; /* Rounded borders */
+      padding: 16px; /* Padding */
+      position: fixed; /* Sit on top of the screen */
+      z-index: 1; /* Add a z-index if needed */
+      left: 50%; /* Center the snackbar */
+      bottom: 30px; /* 30px from the bottom */
+    }
+
+    /* Show the snackbar when clicking on a button (class added with JavaScript) */
+    #snackbar.show {
+      visibility: visible; /* Show the snackbar */
+      /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
+      However, delay the fade out process for 2.5 seconds */
+      -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+      animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    }
+
+    /* Animations to fade the snackbar in and out */
+    @-webkit-keyframes fadein {
+      from {bottom: 0; opacity: 0;}
+      to {bottom: 30px; opacity: 1;}
+    }
+
+    @keyframes fadein {
+      from {bottom: 0; opacity: 0;}
+      to {bottom: 30px; opacity: 1;}
+    }
+
+    @-webkit-keyframes fadeout {
+      from {bottom: 30px; opacity: 1;}
+      to {bottom: 0; opacity: 0;}
+    }
+
+    @keyframes fadeout {
+      from {bottom: 30px; opacity: 1;}
+      to {bottom: 0; opacity: 0;}
+    }
+
+
+
+
   </style>
 
 </head>
@@ -40,17 +96,18 @@
 <!-- Main -->
 <div class="container">
     <div class="row">
+      <% items.products.forEach(function(item) { %>
       <div class="col">
         <div class="card" style="width: 20rem;">
-  <img class="card-img-top" src="https://m.media-amazon.com/images/I/61ddVi-m2CL._AC_SX679_.jpg" alt="Paper gift bags">
-  <div class="card-block">
-    <h4 class="card-title">Paper gift bags</h4>
-    <p class="card-text">Price: $5</p>
-    <a href="#" data-id="1" data-name="bags" data-price="5" class="add-to-cart btn btn-primary">Add to cart</a>
-  </div>
-</div>
+          <img class="card-img-top" src="<%= item.imgSrc %>" alt="<%= item.title %>">
+          <div class="card-block">
+            <h4 class="card-title"><%= item.title %></h4>
+            <p class="card-text">Price: $<%= item.price %></p>
+            <a href="#" data-id="<%= item.id %>" data-name="<%= item.name %>" data-price="<%= item.price %>" class="add-to-cart btn btn-primary">Add to cart</a>
+          </div>
+        </div>
       </div>
-
+      <% }); %>
     </div>
 </div>
 
@@ -79,7 +136,7 @@
     </div>
   </div>
 </div> 
-
+<div id="snackbar"></div>
 <script type="text/javascript" src="cart-api.js"></script>
 </body>
 </html>
