--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -158,7 +158,7 @@ span.price {
             placeholder="street address"
             value="Main St"
           />
-        </div><!-- "Calle Juarez 1, Col. Cuauhtemoc, 11580 Miguel Hidalgo, Ciudad de Mexico" -->
+        </div>
         <div>
           <label for="card-billing-address-unit">&nbsp;</label>
           <input
