--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -149,22 +149,22 @@ span.price {
           value="Jhon Doe"
         />
         <div>
-          <label for="card-billing-address-street">Billing Address</label>
+          <label for="shipping-address-street">Shipping Address</label>
           <input
             type="text"
-            id="card-billing-address-street"
-            name="card-billing-address-street"
+            id="shipping-address-street"
+            name="shipping-address-street"
             autocomplete="off"
             placeholder="street address"
             value="Main St"
           />
         </div>
         <div>
-          <label for="card-billing-address-unit">&nbsp;</label>
+          <label for="shipping-address-unit">&nbsp;</label>
           <input
             type="text"
-            id="card-billing-address-unit"
-            name="card-billing-address-unit"
+            id="shipping-address-unit"
+            name="shipping-address-unit"
             autocomplete="off"
             placeholder="unit"
             value="123"
@@ -173,8 +173,8 @@ span.price {
         <div>
           <input
             type="text"
-            id="card-billing-address-city"
-            name="card-billing-address-city"
+            id="shipping-address-city"
+            name="shipping-address-city"
             autocomplete="off"
             placeholder="city"
             value="San Jose"
@@ -183,8 +183,8 @@ span.price {
         <div>
           <input
             type="text"
-            id="card-billing-address-state"
-            name="card-billing-address-state"
+            id="shipping-address-state"
+            name="shipping-address-state"
             autocomplete="off"
             placeholder="state"
             value="California"
@@ -193,8 +193,8 @@ span.price {
         <div>
           <input
             type="text"
-            id="card-billing-address-zip"
-            name="card-billing-address-zip"
+            id="shipping-address-zip"
+            name="shipping-address-zip"
             autocomplete="off"
             placeholder="zip / postal code"
             value="95125"
@@ -203,8 +203,8 @@ span.price {
         <div>
           <input
             type="text"
-            id="card-billing-address-country"
-            name="card-billing-address-country"
+            id="shipping-address-country"
+            name="shipping-address-country"
             autocomplete="off"
             placeholder="country code"
             value="US"
