--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -252,6 +252,7 @@
       <center><h4>OR</h4></center>
       <hr>
       <div id="paypal-button-container" class="paypal-button-container"></div>
+      <p><a href="/">Continue Shopping</a></p>
     </div>
 
     <div id="snackbar"></div>
