--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -174,6 +174,25 @@
             <div id="cvv" class="card_field"></div>
           </div>
         </div>
+        <label for="card-holder-name">Email</label>
+        <input
+          type="text"
+          id="card-holder-email"
+          name="card-holder-email"
+          autocomplete="off"
+          placeholder="Email"
+          value="sb-gjjlh24858575@personal.example.com"
+        />
+        <label for="card-holder-name">Phone</label>
+        <input
+          type="text"
+          id="card-holder-phone"
+          name="card-holder-phone"
+          autocomplete="off"
+          placeholder="Phone"
+          value="4084396510"
+        />
+
         <label for="card-holder-name">Name on Card</label>
         <input
           type="text"
